--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
@@ -16,6 +17,19 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
+    <style>
+html {
+    min-height: 100%;
+}
+ 
+body {
+    background: -webkit-linear-gradient(left, #93B874, #C9DCB9); /* from left to right */
+    background: -o-linear-gradient(right, #93B874, #C9DCB9); /* ending on the right */
+    background: -moz-linear-gradient(right, #93B874, #C9DCB9); /* ending on the right */
+    background: linear-gradient(to right, #93B874, #C9DCB9); /* moving to the right */
+    background-color: #93B874; /* It's a good idea to set a background color in case the gradient doesn't load */
+}
+</style>
 
 </head>
 
