--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ html {
 }
  
 body {
-    background: -webkit-linear-gradient(left, #93B874, #C9DCB9); /* from left to right */
-    background: -o-linear-gradient(right, #93B874, #C9DCB9); /* ending on the right */
-    background: -moz-linear-gradient(right, #93B874, #C9DCB9); /* ending on the right */
-    background: linear-gradient(to right, #93B874, #C9DCB9); /* moving to the right */
-    background-color: #93B874; /* It's a good idea to set a background color in case the gradient doesn't load */
+    background: -webkit-linear-gradient(#ff0000, #00FF00); /* from left to right */
+    background: -o-linear-gradient(#ff0000, #00FF00); /* ending on the right */
+    background: -moz-linear-gradient(#ff0000, #00FF00); /* ending on the right */
+    background: linear-gradient(#ff0000, #00FF00); /* moving to the right */
+    background-color: #ff0000; /* It's a good idea to set a background color in case the gradient doesn't load */
 }
 </style>
 
